$Id: History,v 1.43 2001-12-14 09:59:35 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
Dec. 14 ,01   H.Kurashige
- Remove event biasing mechanism from track category
  ( it is moved to hadronic/models )
- Add G4Track::CopyTrackInfo 
- Modified G4ParticleChange::AddSecondary to use touchable handle 

Dec. 12, 01  H.Kurashige (track-V04-00-00)
- Added initialization of fStepLength in constructors.
- Fixed a bug that fStepLength is not copied in assginment operator 
 
Dec. 10, 01  H.Kurashige (track-V03-02-08)
- Modified assignment operator so that fCurrentStepNumber is set to 0

Nov.27, 01  J. Apostolakis (track-V03-02-07)  for H. Kurashige
- Modified G4ParticleChange::AddSecondary to use touchable handle - by Hisaya
   (only one of the AddSecondary methods has been modified - to date)

Nov.10, 01 (track-V03-02-06)
- Fixed bugs in assignment operators in G4Track
- Added SetParentWeightByProcess
- Added SetSecondaryWeightByProcess

Nov. 08, 01  G.Cosmo (track-V03-02-05)
- Merge changes included in "track-V03-02-02a".

Oct. 22, 01  H.Kurashige (track-V03-02-04)
- Modify to intorduce TouchableHandle (Radovan)

Oct. 20, 01  H.Kurashige (track-V03-02-03)
- Remove "static inline methods"